fixed alignment of pagination (was only an issue for the one at the bottom of the page)

--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,7 @@ main {
 .pagination {
   display: flex;
   justify-content: center;
+  align-items: center;
   gap: 2rem;
 }
 /* .section_centered {
